# HtpcControlServer

./: CMakeLists.txt  LICENSE
src/: CecConnector.cpp  CecConnector.h  Request.cpp  Request.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  main.cpp  precompiled.h
